# domino

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  Readme.md  Readme.project.md  flake.nix
.github/agents/: Equivalence Prover.agent.md
.github/workflows/: known-good-proofs.yml  nix.yml  rust.yml
contrib/: domino-mode.el
crates/domino/: Cargo.toml  build.rs
crates/domino-ast/: Cargo.toml  README.md
crates/domino-ast/grammar/: domino.pest
crates/domino-ast/src/: arena.rs  ast_nodes.rs  lib.rs  side_tables.rs  source.rs  state.rs  util.rs
crates/domino-diagnostic/: Cargo.toml
crates/domino-diagnostic/src/: lib.rs
crates/domino-identifier-resolution/: Cargo.toml
crates/domino-identifier-resolution/src/: diag.rs  lib.rs  resolve_package.rs  scope.rs
crates/domino-web/: Cargo.toml  README.md
crates/domino-web/src/: lib.rs  prover.rs  smtsolver.rs  ui.rs  util.rs
crates/domino-web/static/: cvc-worker.js  cvc.js  domino-worker.js  dominoui.js  index.css  index.html  index.js
crates/domino-web/static/cvc5/: cvc5.js  cvc5.max.js
crates/domino/src/: cli.rs  main.rs
crates/smtlib/src/: theories.rs
example-projects/: known-good-slow.txt  known-good.txt
example-projects/4WHS-full/games/: CR.comp.ssp  H0.comp.ssp  H1.comp.ssp  H2.comp.ssp  H3.comp.ssp  H4.comp.ssp  H5.comp.ssp  H6.comp.ssp  H7.comp.ssp  PRF.comp.ssp
example-projects/4WHS-full/theorem/: WHSProto.ssp  debug-H7_1_0-H7_1_1.smt2  invariant-H2_1-H3_0.smt2  invariant-H4-H5.smt2  invariant-H5-H6_0.smt2  invariant-H6_1-H7_0.smt2  invariant-H7_1_0-H7_1_1.smt2  randomness-H6_1-H7_0.smt2
example-projects/4WHS-mod/games/: DPRF.ssp  PRF.ssp
example-projects/4WHS-mod/theorem/: noop.ssp
example-projects/4WHS-simple/games/: Hybrid0.comp.ssp  Hybrid1.comp.ssp  Hybrid2.comp.ssp
example-projects/4WHS-simple/theorem/: Simple4WHS.ssp  invariant-Hybrid0-Hybrid1.smt2  invariant-Hybrid3_0-Hybrid3_1.smt2  invariant-KX-KX_NoKey.smt2  invariant-KX_NoKey-KX_NoPrf.smt2  invariant-KX_NoPrf-KX_NoPrf.smt2
example-projects/4WHS/games/: H0.comp.ssp  H1.comp.ssp  H2.comp.ssp  H3.comp.ssp  H4.comp.ssp  H5.comp.ssp  H6.comp.ssp  H65.comp.ssp  H7.comp.ssp  Hybrid0.comp.ssp  Hybrid1.comp.ssp  Hybrid2.comp.ssp  Hybrid2.smt2
example-projects/4WHS/theorem/: Full4WHS.ssp  Simple4WHS.ssp  WHSProto.ssp
example-projects/4WHSdebug/theorem/: WHSProto.ssp
example-projects/4WHSnew/theorem/: WHSProto.ssp
example-projects/ae-mini/theorem/: modularize.ssp
example-projects/ae/theorem/: modularize.ssp  real-hybrid-ideal.ssp
example-projects/err-repro-105/theorem/: simple.ssp
example-projects/err-repro-171/games/: AB.comp.ssp  B.comp.ssp
example-projects/err-repro-92/games/: AB.comp.ssp
example-projects/fo-transform/games/: CPA.comp.ssp
example-projects/hello-world-2rand-test/theorem/: invariant.smt2  proof.ssp
example-projects/hello-world-oracle-rename/games/: BigComposition.comp.ssp  MediumComposition.comp.ssp  MediumCompositionMoreOracles.comp.ssp  SmallComposition.comp.ssp
example-projects/hello-world-oracle-rename/theorem/: invariant.smt2  proof.ssp
example-projects/hello-world-type-params-fail/games/: BigComposition.comp.ssp  MediumCompositionMoreOracles.comp.ssp  SmallComposition.comp.ssp
example-projects/hello-world-type-params-fail/theorem/: proof.ssp
example-projects/hello-world-type-params-fail2/games/: BigComposition.comp.ssp  MediumComposition.comp.ssp
example-projects/hello-world-type-params-fail2/theorem/: proof.ssp
example-projects/hello-world-type-params/games/: BigComposition.comp.ssp  MediumComposition.comp.ssp  MediumCompositionMoreOracles.comp.ssp  SmallComposition.comp.ssp
example-projects/hello-world-type-params/theorem/: proof.ssp
example-projects/hello-world/theorem/: invariant.smt2  proof.ssp
example-projects/kem-dem/: README.md
example-projects/kem-dem-cca-security/: README.md
example-projects/kem-dem-cca-security/theorem/: proof.ssp
example-projects/kem-dem-cpa-security/games/: cpa_kem_game.comp.ssp  cpa_pke_game.comp.ssp  cpa_pke_ideal_kem_game.comp.ssp  dem_eav_game.comp.ssp  game_comp.comp.ssp  hybrid0.comp.ssp  hybrid1.comp.ssp  hybrid2.comp.ssp  kem_cpa_game.comp.ssp  pke_cpa_game.comp.ssp
example-projects/kem-dem-cpa-security/theorem/: invariant-step1.smt2  invariant-step3.smt2  invariant-step4.smt2  invariant-step6.smt2  invariant-step7.smt2  invariant-step9.smt2  proof.ssp  randmap-step3.smt2  randmap-step4.smt2  randmap-step7.smt2
example-projects/kem-dem/kem-dem-cca-security/: KEMDEM_CCA.ec  (+1 more)
example-projects/nprf/: ssp.toml
example-projects/sample_for_test/: ssp.toml
example-projects/yao/: game_hops.toml  ssp.toml
example-projects/yao-layer/: ideal.dot  real.dot
example-projects/yao-n-layer/: yao.excalidraw
nix/: 01_init.nix  02_main.nix
plans/: RFC-review-and-plan.md  RFC.md
scripts/: ssp_compose_to_dot.py  test-for-stability.sh  test-known-examples.sh
src/: expressions.rs  hacks.rs  identifier.rs  inline.rs  lib.rs  package.rs  packageinstance.rs  proof.rs  statement.rs  theorem.rs  types.rs
src/format/: mod.rs
src/gamehops/: conjecture.rs  hybrid.rs  mod.rs  reduction.rs
src/parser/: ast.rs  common.rs  composition.rs  error.rs  mod.rs  package.rs  proof.rs  reduction.rs  ssp.pest  tests.rs  theorem.rs  wire_checks.rs
src/project/: consts.rs  directory.rs  error.rs  load.rs  mod.rs  zipfile.rs
src/transforms/: deconstructinvoke.rs  loopunroll.rs  max_offset_extractor.rs  mod.rs  resolveoracles.rs  returnify.rs  samplify.rs  split_partial.rs  splitinvoke.rs  tableinitialize.rs  theorem_transforms.rs  treeify.rs  type_extract.rs  unwrapify.rs
src/ui/: indicatif.rs  mock.rs  mod.rs  webui.rs
src/util/: mod.rs  process.rs  prover_process.rs  scope.rs  smtmodel.rs
src/writers/: mod.rs  python.rs
(+429 files in other folders)
