[workspace]
members = [".", "crates/smtlib", "crates/domino", "crates/domino-web"]

[workspace.package]
version = "0.1.0"
edition = "2021"
readme = "Readme.md"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
sspverif-smtlib = { path = "crates/smtlib" }
sspverif = { path = "" }

[package]
name = "sspverif"
version = "0.1.0"
authors = ["The Domino Team"]
edition = "2021"

# We are no ready to publish yet.
publish = false

[profile.release]
debug = true

[features]
web = ["dep:web-sys", "dep:js-sys", "dep:wasm-bindgen"]
cmd = ["dep:tempfile", "dep:clap", "dep:subprocess"]

[lib]
crate-type = ["rlib", "cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0", features = ["derive"], optional = true }
env_logger = "0.11"
expectrl = { version = "0.5.2", optional = true }
indicatif = "0.18"
indicatif-log-bridge = "0.2"
itertools = "0.10"
log = "0.4.22 "
miette = { version = "7.2.0", features = ["fancy"] }
pest = { version = "2.7", features = ["miette-error"] }
pest_derive = "2.7"
rayon = "1.10"
serde = "1.0.137"
serde_derive = "1.0.137"
sspverif-smtlib = { workspace = true }
subprocess = {version = "0.2", optional = true }
tempfile = { version = "3", optional = true }
thiserror = "1.0.61"
walkdir = "2"
wasm-bindgen = {version = "0.2", optional = true }
web-sys = {version = "0.3", optional = true, features = ["console"] }
js-sys = {version = "0.3", optional = true }
zip = { version = "7.0", features = ["deflate"], default-features = false }

[dev-dependencies]
mockall = "0.13"
