[workspace]
members = [".", "crates/smtlib", "crates/domino"]

[workspace.package]
version = "0.1.0"
edition = "2021"
readme = "Readme.md"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
sspverif-smtlib = { path = "crates/smtlib" }
sspverif = { path = "" }

[package]
name = "sspverif"
version = "0.1.0"
authors = ["The Domino Team"]
edition = "2021"

# We are no ready to publish yet.
publish = false

[profile.release]
debug = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[features]
default = ["process-solver"]
process-solver = ["dep:clap", "dep:expectrl", "dep:subprocess"]

[dependencies]
env_logger = "0.11"
indicatif = "0.18"
indicatif-log-bridge = "0.2"
# Nice to have for further writer experiments:
# indoc = "2.0"
itertools = "0.10"
log = "0.4.22 "
miette = { version = "7.2.0", features = ["fancy"] }
pest = { version = "2.7", features = ["miette-error"] }
pest_derive = "2.7"
rayon = "1.10"
serde = "1.0.137"
serde_derive = "1.0.137"
sspverif-smtlib = { workspace = true }
tempfile = "3"
thiserror = "1.0.61"
walkdir = "2"

# Feature: process solver
subprocess = { version="0.2", optional = true }
expectrl = { version="0.8.0", optional = true }
clap = { version = "4.0", features = ["derive"], optional = true }

[dev-dependencies]
mockall = "0.13"
