[workspace]
members = [
    ".",
    "crates/smtlib",
    "crates/domino",
    "crates/domino-ast",
    "crates/domino-identifier-resolution",
    "crates/domino-diagnostic",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
readme = "Readme.md"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
domino-ast = { path = "crates/domino-ast" }
domino-diagnostic = { path = "crates/domino-diagnostic" }
sspverif-smtlib = { path = "crates/smtlib" }
sspverif = { path = "" }
thiserror = "1.0.61"

pest = "2.7"
pest_derive = "2.7"
miette = "7.2.0"

[package]
name = "sspverif"
version = "0.1.0"
authors = ["The Domino Team"]
edition = "2021"

# We are no ready to publish yet.
publish = false

[profile.release]
debug = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0", features = ["derive"] }
env_logger = "0.11"
expectrl = "0.8.0"
indicatif = "0.18"
indicatif-log-bridge = "0.2"
# Nice to have for further writer experiments:
# indoc = "2.0"
itertools = "0.10"
log = "0.4.22 "
miette = { workspace = true, features = ["fancy"] }
pest = { workspace = true, features = ["miette-error"] }
pest_derive.workspace = true
rayon = "1.10"
serde = "1.0.137"
serde_derive = "1.0.137"
sspverif-smtlib = { workspace = true }
subprocess = "0.2"
tempfile = "3"
thiserror = "1.0.61"
walkdir = "2"

[dev-dependencies]
mockall = "0.13"
