[package]
name = "domino-web"
version.workspace = true
edition.workspace = true
readme = { workspace = true }

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
wasm-bindgen = "0.2"
zip = { version = "7.0", features = ["deflate"], default-features = false }
sspverif = { workspace = true, features = ["web"] }
